--- a/indexes.html
+++ b/indexes.html
@@ -8,22 +8,24 @@
 </head>
 <body>
     <div class="header">
-        <h1>Photobooth</h1>
+        <h1><a href="index.html">Photonginamo</a></h1>
         <p id="counter">0/3</p>
     </div>
     <div class="container">
-        <div class="video-container">
-            <video id="video" autoplay playsinline></video>
-            <div id="timer">3</div>
-        </div>
-        <div class="pics" id="pics">
-            <img id="capturedImage">
-            <img id="capturedImage2">
-            <img id="capturedImage3">
-            <!-- <div class="pics-container">arf</div> -->
-        </div>
-        <div class="buttons">
+        <div class="main">
+            <div class="video-container">
+                <video id="video" autoplay playsinline></video>
+                <div id="timer">3</div>
+            </div>
             <button id="capture">Capture</button>
+        </div>
+        <div class="main">
+            <div class="pics" id="pics">
+                <img id="capturedImage">
+                <img id="capturedImage2">
+                <img id="capturedImage3">
+                <!-- <div class="pics-container">arf</div> -->
+            </div>
             <a href="canvas.html">DONE</a>
         </div>
     </div>
